--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -43,4 +46,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //lib coroutines
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:version_code'
+    testImplementation 'junit:junit:version_code'
+    androidTestImplementation 'androidx.test.ext:junit:version_code'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:version_code'
+
+    //Room Library
+
+    implementation "android.arch.persistence.room:runtime:version_code"
+    kapt "android.arch.persistence.room:compiler:version_code"
+
+    //Library View Tambahan
+    implementation 'androidx.recyclerview:recyclerview:version_code'
+    implementation 'androidx.cardview:cardview:version_code'
+    implementation 'com.google.android.material:material:version_code'
 }
