--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,24 +43,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.room:room-common:2.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //lib coroutines
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:version_code'
-    testImplementation 'junit:junit:version_code'
-    androidTestImplementation 'androidx.test.ext:junit:version_code'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:version_code'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //Room Library
 
-    implementation "android.arch.persistence.room:runtime:version_code"
-    kapt "android.arch.persistence.room:compiler:version_code"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
 
     //Library View Tambahan
-    implementation 'androidx.recyclerview:recyclerview:version_code'
-    implementation 'androidx.cardview:cardview:version_code'
-    implementation 'com.google.android.material:material:version_code'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.5.0'
 }
